[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/ui/intro_slide/Intro2.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/IntroUI.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/Dialog/DialogPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/ui/intro_slide/Intro1.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/intro_slide/Intro3.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/intro_slide/Intro6.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/intro_slide/Intro4.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/intro_slide/Intro5.png" type="Texture" id=8]
[ext_resource path="res://src/UserInterface/InputControl.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/music/Foolish_Villain.mp3" type="AudioStream" id=10]

[node name="IntroUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
Slides = [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ) ]

[node name="Slide" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="DialogPlayer" parent="." instance=ExtResource( 3 )]
visible = false

[node name="StartDialogTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Next" parent="." instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -49.0
margin_top = -100.0
margin_right = -1.0
margin_bottom = -84.0
rect_scale = Vector2( 2, 2 )
action_name = "ui_accept"
label_text = "Next"

[node name="IconSprite" parent="Next" index="0"]
visible = false

[node name="ActionName" parent="Next" index="4"]
visible = true
margin_left = -15.0
margin_top = 7.5
margin_right = 177.0
margin_bottom = 45.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Next"

[node name="Cancel" parent="." instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -49.0
margin_top = -45.0
margin_right = -1.0
margin_bottom = -29.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}
action_name = "ui_cancel"
label_text = "Skip"

[node name="IconSprite" parent="Cancel" index="0"]
visible = false

[node name="ActionName" parent="Cancel" index="4"]
visible = true
margin_left = -15.0
margin_top = 7.5
margin_right = 177.0
margin_bottom = 45.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Skip"

[node name="bgm" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 10 )
volume_db = -6.0
autoplay = true
bus = "Bgm"

[connection signal="timeout" from="StartDialogTimer" to="." method="_on_StartDialogTimer_timeout"]

[editable path="Next"]
[editable path="Cancel"]
